add: get incidents by unom
